fix: "add x overflow none"

--- a/app/globals.css
+++ b/app/globals.css
@@ -143,5 +143,6 @@
   }
   body {
     @apply bg-background text-foreground;
+    overflow-x: hidden;
   }
 }
